<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SesionIniciada">

    <LinearLayout
        android:layout_width="308dp"
        android:layout_height="543dp"
        android:layout_marginTop="5dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tMensaje"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:text="@string/start_sesion"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Usuario: " />

        <EditText
            android:id="@+id/tNombres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Nombres"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/tApellidos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Apellidos"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/tEdad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Edad"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/tTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Telefono"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/bRecuperar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recuperar" />

        <Button
            android:id="@+id/bGuardar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guardar" />

        <Button
            android:id="@+id/bBorrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/borrar" />

        <Button
            android:id="@+id/bCerrarSesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="logout"
            android:text="@string/logout" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>