<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="358dp"
        android:layout_height="676dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <EditText
                android:id="@+id/iNum1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Ingresa número 1"
                android:inputType="numberDecimal"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/iNum2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Ingresa número 2"
                android:inputType="numberDecimal"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/tResultado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/bMultiplica"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="80dp"
                    android:layout_marginTop="4dp"
                    android:text="x"
                    android:textSize="18dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/bSuma" />

                <Button
                    android:id="@+id/bSuma"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="80dp"
                    android:layout_marginTop="4dp"
                    android:text="+"
                    android:textSize="26dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/bDivision"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="28dp"
                    android:layout_marginTop="4dp"
                    android:text="/"
                    android:textSize="20dp"
                    app:layout_constraintStart_toEndOf="@+id/bMultiplica"
                    app:layout_constraintTop_toBottomOf="@+id/bResta" />

                <Button
                    android:id="@+id/bResta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="28dp"
                    android:layout_marginTop="4dp"
                    android:text="-"
                    android:textSize="26dp"
                    app:layout_constraintStart_toEndOf="@+id/bSuma"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

        <Button
            android:id="@+id/bSiaga"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="goSiaga"
            android:text="@string/siaga" />

        <Button
            android:id="@+id/bSinNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="goWeb"
            android:text="@string/embebido" />

        <Button
            android:id="@+id/bRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="goRegister"
            android:text="@string/register" />

        <Button
            android:id="@+id/bLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="goLogin"
            android:text="@string/login" />

        <Button
            android:id="@+id/bAcerca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="goAbout"
            android:text="@string/acerca" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>